Add controller tests and update report assertions
Add ProductControllerTest and UserControllerTest as @WebMvcTest classes with mocked services to cover list, create, delete and activate endpoints. Adjust ReportServiceTest assertions to use getFirst() instead of get(0) to match the collection return type and avoid index-based access.